fixed layout bug from create and view html

--- a/frontend/boards/board.css
+++ b/frontend/boards/board.css
@@ -10,6 +10,10 @@
 	background-color: #ffff88;
     border: 1px solid #ffff66;
     padding: 5px;
-    min-height: 100px;
-    min-width: 100px;
+}
+.sticky-preview{
+	font-family: Handwritten;
+	background-color: #ffff88;
+    border: 1px solid #ffff66;
+    padding: 5px;
 }
